<resources>
    <string name="app_name">Food Ninja</string>
    <string name="here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy">Here You Can find a chef or dish for every taste and color. Enjoy!</string>
    <string name="find_your_comfort_food_here">Find Your Comfort Food Here</string>
    <string name="next">Next</string>
    <string name="foodninja">FoodNinja</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="enjoy_a_fast_and_smooth_food_delivery_at_your_doorstep">Enjoy a fast and smooth food delivery at your doorstep</string>
    <string name="food_ninja_is_where_your_comfort_food_lives">Food Ninja is Where Your Comfort Food Lives</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="this_data_will_be_displayed_in_your_account_profile_for_security">This data will be displayed in your account profile for security</string>
</resources>