<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_Activity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView1"
        android:layout_width="345dp"
        android:layout_height="176dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/burger" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="188dp"
        android:layout_height="54dp"
        android:layout_marginTop="184dp"
        android:text="@string/foodninja"
        android:textAlignment="textStart"
        android:textColor="#00C853"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="162dp"
        android:layout_height="16dp"
        android:layout_marginTop="236dp"
        android:text="@string/deliever_favorite_food"
        android:textAlignment="center"
        android:textColor="#09051C"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="217dp"
        android:layout_height="26dp"
        android:layout_marginTop="310dp"
        android:text="@string/sign_up_for_free"
        android:textAlignment="center"
        android:textColor="#09051C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/name"
        android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="444dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/baseline_attach_email_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="512dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="596dp"
        android:checked="false"
        android:button="@drawable/custom_checkbox"
        android:text="Keep Me Signed In"
        android:textAlignment="textStart"
        android:textColor="#A59D9D"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="628dp"
        android:checked="false"
        android:button="@drawable/custom_checkbox"
        android:text="Email Me About Special Pricing"
        android:textAlignment="center"
        android:textColor="#A59D9D"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="694dp"
        android:backgroundTint="#53E88B"
        android:text="@string/create_account"
        android:textSize="16sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="145dp"
        android:layout_height="20dp"
        android:layout_marginTop="760dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#00C853"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>