<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_process_Activity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="264dp"
        android:layout_height="66dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="103dp"
        android:text="Fill in your bio to get started"
        android:textAlignment="textStart"
        android:textColor="#09051C"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="239dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="188dp"
        android:text="@string/this_data_will_be_displayed_in_your_account_profile_for_security"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="347dp"
        android:layout_height="61dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="347dp"
        android:layout_height="61dp"
        android:layout_marginTop="333dp"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="347dp"
        android:layout_height="61dp"
        android:layout_marginTop="414dp"
        android:background="@drawable/custom_edit_text"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="695dp"
        android:backgroundTint="#15BE77"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>