<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_Activity2">

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="724dp"
        android:backgroundTint="#15BE77"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="211dp"
        android:layout_height="58dp"
        android:layout_marginTop="592dp"
        android:text="@string/find_your_comfort_food_here"
        android:textAlignment="center"
        android:textColor="#09051C"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_marginTop="648dp"
        android:text="@string/here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView1"
        android:layout_width="371dp"
        android:layout_height="555dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/drree" />


</androidx.constraintlayout.widget.ConstraintLayout>